--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.7",
-    "@mikro-orm/core": "^4.5.7",
-    "@mikro-orm/postgresql": "^4.5.7",
-    "@mikro-orm/reflection": "^4.5.7",
+    "@mikro-orm/cli": "^5.0.0-dev.645",
+    "@mikro-orm/core": "^5.0.0-dev.645",
+    "@mikro-orm/migrations": "^5.0.0-dev.645",
+    "@mikro-orm/postgresql": "^5.0.0-dev.645",
+    "@mikro-orm/reflection": "^5.0.0-dev.645",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.5.4"
   },
   "devDependencies": {},
   "scripts": {
